[gd_scene load_steps=4 format=3 uid="uid://curqgkv32cxfw"]

[ext_resource type="AttributeSet" uid="uid://en06khsjql3a" path="res://examples/attribute_buffs_demo/attribute_buffs_attribute_set.tres" id="1_v3eka"]
[ext_resource type="Script" uid="uid://b7vqhwg74qls1" path="res://examples/attribute_buff_queue_execution/attribute_buff_queue_execution.gd" id="1_ys284"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys284"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="AttributeBuffQueueExecution" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_ys284")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "We have two transient timed buffs to apply here.
The first buff, activates itself immediately when applied.
The latter, waits for the previous one to be activated. "
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_ys284")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 380)
layout_mode = 2
size_flags_vertical = 3

[node name="WaterfallVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WaterfallButton" type="Button" parent="VBoxContainer/HBoxContainer/WaterfallVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Add Waterfall buff"

[node name="WaterfallBuffsVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/WaterfallVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="ParallelVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ParallelButton" type="Button" parent="VBoxContainer/HBoxContainer/ParallelVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add Parallel buff"

[node name="ParallelBuffsVBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ParallelVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="AttributeContainer" type="AttributeContainer" parent="."]
attribute_set = ExtResource("1_v3eka")
